--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="UTF-8"> 
-        <title>Barbería Alura</title>
+        <title>Barbería Secchi</title>
         <link rel="stylesheet" href="style-home.css">
     
     </head>
@@ -13,16 +13,16 @@
     <body>
 
         <header>
-            <h1 class="titulo-principal">Barbería Alura</h1>
+            <h1 class="titulo-principal">Barbería Secchi</h1>
         </header>
 
         <img id="banner" src="banner/banner.jpg">
         
         <div class="principal">
 
-            <h2 class="titulo-centralizado">Sobre la Barbería Alura</h2>
+            <h2 class="titulo-centralizado">Sobre la Barbería Secchi</h2>
 
-            <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
+            <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Secchi</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Secchi ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
             <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
 
