--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Productos - Barbería Alura</title>
+        <title>Productos - Barbería Secchi</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -46,7 +46,7 @@
 
         <footer>
             <img src="imagenes/logo-blanco.png">
-            <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
+            <p class="copyright">&copy Copyright Barbería Secchi - 2020</p>
         </footer>
     </body>
 </html>
