--- a/productos.html
+++ b/productos.html
@@ -1,52 +1,48 @@
-<!DOCTYPE html>
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Productos - Barbería Secchi</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <div class="caja">
-                <h1><img src="imagenes/logo.png"></h1>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="productos.html">Productos</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-
-        <main>
-            <ul class="productos">
-                <li>
-                    <h2>Cabello</h2>
-                    <img src="imagenes/cabello.jpg">
-                    <p class="producto-descripcion">Con tijera o máquina, a gusto del cliente</p>
-                    <p class="producto-precio">$ 10.00</p>
-                </li>
-                <li>
-                    <h2>Barba</h2>
-                    <img src="imagenes/barba.jpg">
-                    <p class="producto-descripcion">Corte y diseño profesional de barba</p>
-                    <p class="producto-precio">$ 08.00</p>
-                </li>
-                <li>
-                    <h2>Cabello + Barba</h2>
-                    <img src="imagenes/cabello+barba.jpg">
-                    <p class="producto-descripcion">Paquete completo de cabello y barba</p>
-                    <p class="producto-precio">$ 15.00</p>
-                </li>
-            </ul>
-        </main>
-
-        <footer>
-            <img src="imagenes/logo-blanco.png">
-            <p class="copyright">&copy Copyright Barbería Secchi - 2020</p>
-        </footer>
-    </body>
-</html>
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
