--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Productos - Barbería Secchi</title>
+        <title>servicios - Barbería Secchi</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -21,7 +21,7 @@
         </header>
 
         <main>
-            <ul class="productos">
+            <ul class="servicios">
                 <li>
                     <h2>Cabello</h2>
                     <img src="imagenes/cabello.jpg">
@@ -32,13 +32,13 @@
                     <h2>Barba</h2>
                     <img src="imagenes/barba.jpg">
                     <p class="producto-descripcion">Corte y diseño profesional de barba</p>
-                    <p class="producto-precio">$ 08.00</p>
+                    <p class="producto-precio">$ 8000.00</p>
                 </li>
                 <li>
                     <h2>Cabello + Barba</h2>
                     <img src="imagenes/cabello+barba.jpg">
                     <p class="producto-descripcion">Paquete completo de cabello y barba</p>
-                    <p class="producto-precio">$ 15.00</p>
+                    <p class="producto-precio">$ 15000.00</p>
                 </li>
             </ul>
         </main>
